# PhotosPurge

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  deploy.sh  pyproject.toml
PhotoPurge/gmailapp/migrations/: 0001_initial_squashed_0002_alter_customuser_last_active.py
PhotoPurge/photos/migrations/: 0001_initial_squashed_0002_remove_migrationstatus_user_and_more.py
