[project]
name = "photopurge"
version = "0.1.0"
description = "A solution for Google account storage overflow."
requires-python = ">=3.11"
dependencies = [
    "Django==5.1.4",
    "celery==5.4.0",
    "redis==5.2.1",
    "django-allauth==65.3.0",
    "django-allauth-ui==1.5.3",
    "django-celery-beat==2.7.0",
    "django-sslserver==0.22",
    "django-timezone-field==7.1",
    "django-widget-tweaks==1.5.0",
    "google-api-python-client==2.156.0",
    "google-auth==2.37.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "mysqlclient==2.2.6",
    "python-decouple==3.8",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "slippers==0.6.2",
    "PyYAML==6.0.2",
    "python-crontab==3.2.0",
    "gunicorn",
    "PyJWT==2.10.1",
    "cryptography==44.0.0"
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-django",
    "pre-commit",
    "django-debug-toolbar",
]
